# falamus

./: .gitignore  README.md  pyproject.toml  run.py
falamus/: i18n.py  main.py  mcp_bridge.py  mcp_client.py  mcp_config.py  mcp_server.py  session_api.py  settings.py  version.py
falamus/core/: __init__.py  agent.py  backend.py  blacklist.md  client.py  context.py  providers.py  safety.py  secrets.py  subagent.py
falamus/persistence/: __init__.py  error_log.py  rules.py  session_store.py  workspace.py
falamus/prompt/: __init__.py
falamus/prompt/default_cloud/: agents.md  notes.md  rules.md  tools.md
falamus/prompt/default_local/: agents.md  notes.md  rules.md  tools.md
falamus/tools/: __init__.py  cli.py  files.py  image.py  registry.py  shell_session.py
falamus/ui/: __init__.py  status.py  statusbar.py  tui.py
